...
  const tabLabelStyle = { fontFamily: theme.fontFamily };

  return (
    <NativeTabs labelStyle={tabLabelStyle}>
      <NativeTabs.Trigger name="(home)">
        <NativeTabs.Trigger.Icon sf="house.fill" md="home" />
        <NativeTabs.Trigger.Label>Home</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>

      <NativeTabs.Trigger name="biometric-auth">
        <NativeTabs.Trigger.Icon sf="faceid" md="fingerprint" />
        <NativeTabs.Trigger.Label>Biometría</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>
...
        <NativeTabs.Trigger.Icon sf="doc.fill" md="description" />
        <NativeTabs.Trigger.Label>Documentos</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>

      <NativeTabs.Trigger name="secure-storage">
        <NativeTabs.Trigger.Icon sf="lock.fill" md="lock" />
        <NativeTabs.Trigger.Label>Storage</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>
    </NativeTabs>
  );
}

export default function RootLayout() {
...
